UI: Update the mini map style to prevent most overflows
Very long zone texts may still cause overflow, but most won't anymore.

--- a/Core/WebClient/Interface/BasicTheme/Widgets/MiniMapOverlay.css
+++ b/Core/WebClient/Interface/BasicTheme/Widgets/MiniMapOverlay.css
@@ -9,19 +9,22 @@
   border-radius: 3px;
   z-index: var(--ui-layer-overlay);
   text-align: center;
+  width: calc(256px + 2 * 10px); /* width of the image plus padding */
 }
 
 #miniMapZoneText {
-  /* Must add overlay padding for visual consistency here */
+  font-size: 0.85em;
   margin-bottom: 10px;
-  max-width: 15em;
+  width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  box-sizing: border-box; /* consider padding and border in the element's total width */
 }
 
 .minimap-image {
   width: 256px;
   height: 256px;
   border: 5px solid lightblue;
+  box-sizing: border-box; /* consider padding and border in the element's total width */
 }
